--- a/20230507_dissertation.bib
+++ b/20230507_dissertation.bib
@@ -1121,4 +1121,15 @@
   year      = {2023},
 }
 
+@Article{freedle2003correcting,
+  author    = {Freedle, Roy},
+  journal   = {Harvard Educational Review},
+  title     = {Correcting the SAT's ethnic and social-class bias: A method for reestimating SAT scores},
+  year      = {2003},
+  number    = {1},
+  pages     = {1--43},
+  volume    = {73},
+  publisher = {Harvard Education Publishing Group},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
