A few more changes based on BEA 2023

--- a/20230507_dissertation_draft01.tex
+++ b/20230507_dissertation_draft01.tex
@@ -743,7 +743,7 @@ In terms of performance, OOS BERT models nearly achieved parity with human rater
 \subsection{BERT increases DIF for L1}
 \label{res_rq1}
 
-Overall, BERT-based automated scores increased DIF (to a very small degree) with respect to L1 in Grade Band 9–12. Although this difference is visible across all items in Grade Band 9–12, Item 3 carries the largest difference between human and automated scores. 
+Overall, BERT-based automated scores increased DIF (to a very small degree) with respect to L1 in Grade Band 9–12. Although this difference was visible across all items in Grade Band 9–12, item 3 had the largest difference between human and automated scores. 
 
 \subsubsection{Overall DIF of human scores}
 
@@ -764,7 +764,7 @@ Overall DIF of automated scores was highly similar to human scores. As seen in F
 
 \subsubsection{Human vs. BERT individual item DIF}
 
-In addition to overall DIF, we examined DIF of each individual item. Figure \ref{fig:zabs_itm} presents DIF of human and automated scores, for gender and L1, across Items 1–3, for each grade band. Human and automated scores are again quite consistent. For Grade Band 9–12, L1 DIF tends to be higher across all items; however, only Item 3 reaches statistical significance ($\Delta z_{abs} = .032, CI_{95\%} = [.010, .055], p = 3.3 \cdot 10^{-3}$). An effect size of 0.032 is very small.
+In addition to overall DIF, we examined DIF of each individual item. Figure \ref{fig:zabs_itm} presents DIF of human and automated scores, for gender and L1, across items 1–3, for each grade band. Human and automated scores are again quite consistent. For Grade Band 9–12, L1 DIF tends to be higher across all items; however, only item 3 reaches statistical significance ($\Delta z_{abs} = .032, CI_{95\%} = [.010, .055], p = 3.3 \cdot 10^{-3}$). An effect size of 0.032 is very small.
 
 \begin{figure}[h]
     \centering
@@ -777,9 +777,9 @@ In addition to overall DIF, we examined DIF of each individual item. Figure \ref
 
 \subsection{DIF increases with item length}
 
-Longer speaking items tended to exhibit more DIF than shorter speaking items. Automated scores, however, do not exacerbate this trend. 
+Longer speaking items tended to exhibit more DIF than shorter speaking items. Automated scores, however, did not exacerbate this trend. 
 
-In terms of item length, Item 3 was longer than Item 2, which was in turn longer than Item 1. Figure \ref{fig:zabs_itm} shows that DIF, too, generally increased in magnitude across items 1–3. Table \ref{itm_diff} presents the specific values of $\Delta z_{abs,ij}$ for all three item comparisons (corresponding to combinations of Item $i \neq j$) for each grade-band. 
+By design, item 3 was longer than item 2, which in turn was longer than item 1. Figure \ref{fig:zabs_itm} shows that, in general, item 3 had more DIF than item 2, which in turn had more DIF than item 1. Table \ref{itm_diff} presents the specific values of $\Delta z_{abs,ij}$, based on human rater scores, for all three item comparisons. For example, in grade band 9-12, the difference in DIF between items 1 and 2, based on human rater scores (i.e., the gray bars in Figure \ref{fig:zabs_itm}), with respect to L1, was $\Delta z_{abs, 21} = .087$. That is, item 2 had .087 more standard deviations of DIF compared to item 1. Using B-H adjusted $p$-values, this is a statistically significant difference. As indicated by asterisks in Table \ref{itm_diff}, many (but not all) between-item $\Delta z_{abs, ij}$ were statistically significant. 
 
 \begin{table*}[ht]
 \centering
@@ -802,18 +802,17 @@ Differences in DIF between longer and shorter items, within each grade band, bas
 {\raggedright \newline \newline  Note: "*" indicates that an estimate is statistically significant using B-H adjusted p-values. 95\% confidence intervals are presented in square brackets. \par}
 \end{table*}
 
-Although longer items tend to have more DIF, this general trend was not uniformly consistent across factors and grade-bands. Specifically, the trend was less consistent for gender: There were no statistically significant differences in Grade Band 2–3; and in Grade Band 9–12, Item 3 did not have more DIF than Item 2 at a statistically significant level. Additionally, for Grade Band 2–3, Item 3 did not have significantly more DIF than Item 2.
+Although longer items tend to have more DIF, this general trend was not uniformly consistent across factors and grand bands. Specifically, the trend was less consistent for gender: There were no statistically significant differences in grade band 2–3; and in grade band 9–12, item 3 did not have more DIF than item 2 at a statistically significant level. Additionally, for grade band 2–3, item 3 did not have significantly more DIF than item 2.
 
-In order to determine if item-item differences were exacerbated by automated scoring, we computed second-order differences, $\Delta \Delta z_{abs}$. None of these values, however, were statistically significant. We conclude that the pattern of longer-items producing more DIF is consistent for both human and automated raters. 
+In order to determine if item-item differences were exacerbated by automated scoring, we computed second-order differences, $\Delta \Delta z_{abs}$. None of these values, however, were statistically significant. We conclude that the pattern of longer items producing more DIF is consistent for both human and automated raters. 
 
 \subsection{DIF is higher for older examinees}
 
-In general, there is more DIF for older examinees (in Grade Band 9–12) compared to younger examinees (in Grade Band 2–3). Automated scores, however, do not exacerbate this trend.
+In general, there was more DIF for older examinees (in grade band 9–12) compared to younger examinees (in grade band 2–3). Automated scores, however, did not exacerbate this trend.
 
-There is significantly more DIF for Grade Band 9–12 compared to 2–3, in terms of both gender and L1. This trend can be seen clearly in Figure \ref{fig:zabs_itm}. Based on bootstrapped estimates for gender, $\Delta z_{abs} = .059$ ($CI_{95\%} = [.011, .100], p = 4.9 \cdot 10^{-3}$); and for L1, $\Delta z_{abs} = 0.082$ ($CI_{95\%} = [0.047, 0.120], p = 3.8 \cdot 10^{-6}$). 
+There was significantly more DIF in grade band 9–12, compared to grade band 2–3, in terms of both gender and L1. This trend can be seen clearly in Figure \ref{fig:zabs_ovr}. Based on bootstrapped estimates for gender, $\Delta z_{abs} = .059$ ($CI_{95\%} = [.011, .100], p = 4.9 \cdot 10^{-3}$); and for L1, $\Delta z_{abs} = 0.082$ ($CI_{95\%} = [0.047, 0.120], p = 3.8 \cdot 10^{-6}$). 
 
-When we examine individual items, this trend is present for items that are medium–long (Items 2 and 3) but not for short items (Item 1). Visually, this can be seen in Figure \ref{fig:zabs_itm}. Numerically, this is presented for human ratings in Table \ref{gr_diff}. 
-
+When we examine individual items, this trend is present for items that are medium-length or longer (items 2 and 3) but not for short items (item 1). Visually, this can be seen in Figure \ref{fig:zabs_itm}. The $\Delta z_{abs}$, based on human ratings, are presented in Table \ref{gr_diff}. For example, in item 1, the difference between DIF observed in grade band 2-3 versus grade band 9-12 is $\Delta z_{abs} = .013$, with respect to L1, which is not a statistically significant difference. In items 2 and 3, however, the differences between grade band 2-3 and 9-12 are much larger ($\Delta z_{abs} = .054$ and $\Delta z_{abs} = .145$, respectively). 
 
 \begin{table}[htbp]
 \centering
@@ -831,7 +830,7 @@ L1 & 0.005 [-0.037, 0.048] & 0.05 * [0.006, 0.095] & 0.144 * [0.098, 0.189] \\
 {\newline \newline Note: "*" indicates that an estimate is statistically significant using B-H adjusted p-values. 95\% confidence intervals are provided in square brackets. \par}
 \end{table}
 
-In order to determine if differences between grade-bands were exacerbated by automated scoring, we computed second-order differences, $\Delta \Delta z_{abs}$. None of these values, however, were statistically significant. We conclude that the trend of greater DIF in older examinees is consistent for both human and automated raters. 
+In order to determine if differences between grand bands were exacerbated by automated scoring, we computed second-order differences, $\Delta \Delta z_{abs}$. None of these values, however, were statistically significant. We conclude that the trend of greater DIF in older examinees was consistent for both human and automated raters. 
 
 \subsection{Severity of DIF depends on L1 and grade band}
 
@@ -1286,7 +1285,7 @@ We were not able to corroborate the finding that native Arabic speakers had a lo
 \section{Human vs. BERT DIF for each item}
 \label{sec:appendix_z_itm}
 
-Figure \ref{fig:z_itm} presents the magnitude and direction of DIF of Items 1-3 for grade-bands 2-3 and 9-12, based on gender and all nine L1 focal groups separately.
+Figure \ref{fig:z_itm} presents the magnitude and direction of DIF of items 1-3 for grade-bands 2-3 and 9-12, based on gender and all nine L1 focal groups separately.
 
 \begin{figure*}[t]
     \centering
