Added draft 2, sent to committee members

--- a/20230507_dissertation.bib
+++ b/20230507_dissertation.bib
@@ -1132,4 +1132,19 @@
   publisher = {Harvard Education Publishing Group},
 }
 
+@Article{vaswani2017attention,
+  author  = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal = {Advances in neural information processing systems},
+  title   = {Attention is all you need},
+  year    = {2017},
+  volume  = {30},
+}
+
+@Article{prabhakaran2021releasing,
+  author  = {Prabhakaran, Vinodkumar and Davani, Aida Mostafazadeh and Diaz, Mark},
+  journal = {arXiv preprint arXiv:2110.05699},
+  title   = {On releasing annotator-level labels and information in datasets},
+  year    = {2021},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
